// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItem > should render correctly with default result 1`] = `
<div>
  <div
    class="_container_8ec90d"
    role="listitem"
  >
    <a
      class="_content_8ec90d"
      href="https://reactjs.org/"
      target="_blank"
    >
      <h3
        class="_title_8ec90d"
      >
        React
      </h3>
      <p
        class="_meta_8ec90d"
      >
        <span>
          100 points
        </span>
        <span
          class="_seperator_8ec90d"
        />
        <span>
           by Jordan Walke
        </span>
        <span
          class="_seperator_8ec90d"
        />
        <span>
          10 comments
        </span>
      </p>
    </a>
  </div>
</div>
`;

exports[`ListItem > should render correctly with story result 1`] = `
<div>
  <div
    class="_container_8ec90d"
    role="listitem"
  >
    <a
      class="_content_8ec90d"
      href="https://redux.js.org/"
      target="_blank"
    >
      <h3
        class="_title_8ec90d"
      >
        Redux
      </h3>
      <p
        class="_meta_8ec90d"
      >
        <span>
          No points
        </span>
        <span
          class="_seperator_8ec90d"
        />
        <span>
           by Dan Abramov
        </span>
        <span
          class="_seperator_8ec90d"
        />
        <span>
          No comments
        </span>
      </p>
    </a>
  </div>
</div>
`;
